--- a/.gitignore
+++ b/.gitignore
@@ -1,174 +1,88 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+#First Model of SADRA Algorithm 
 
-# C extensions
-*.so
 
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+import pandas as pd
+import numpy as np
+import matplotlib.pyplot as plt
+from sklearn.model_selection import train_test_split
+from sklearn.linear_model import LinearRegression, Ridge
+from sklearn.svm import SVR
+from sklearn.ensemble import RandomForestRegressor
+from sklearn.preprocessing import PolynomialFeatures
+from sklearn.pipeline import make_pipeline
+from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
+#Enter data
+data = {
+    'Cement': [380, 420, 360, 390, 350, 410, 375, 430, 340, 400, 370, 395, 355, 415, 385, 425, 365, 405, 345, 435],
+    'Water': [180, 190, 170, 185, 165, 195, 178, 200, 160, 188, 172, 182, 168, 192, 176, 198, 174, 187, 162, 205],
+    'Fine_Aggregate': [750, 800, 700, 760, 680, 780, 730, 820, 650, 770, 710, 745, 690, 790, 735, 810, 705, 765, 660, 830],
+    'Coarse_Aggregate': [1150, 1200, 1050, 1170, 1000, 1220, 1120, 1250, 980, 1180, 1080, 1165, 1030, 1230, 1130, 1240, 1070, 1190, 990, 1260],
+    'Fiber_Type': [1.5, 0, 2, 1.2, 0, 1.8, 0.5, 0, 1, 1.6, 0, 0.8, 1.4, 0, 1.1, 2.2, 0, 1.7, 0, 0],
+    'Micro_Silica': [25, 30, 15, 28, 10, 35, 22, 40, 12, 27, 18, 24, 14, 38, 23, 42, 17, 29, 11, 45],
+    'Super_Plasticizer': [5, 6, 3.5, 5.2, 2.8, 6.5, 4, 7, 2.5, 5.5, 3.2, 4.8, 3, 6.8, 4.3, 7.2, 3.1, 5.7, 2.6, 7.5],
+    'Compressive_Strength': [48.3, 52.1, 38.9, 47.5, 34.5, 55, 42.3, 58.2, 31.8, 50.4, 36.7, 46.1, 33.2, 56.7, 43.8, 60.1, 35.4, 51.9, 32.5, 62.3]
+}
 
-# Translations
-*.mo
-*.pot
+df = pd.DataFrame(data)
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+#Find Optimal Dataset
+threshold = 35 
+df = df[df['Compressive_Strength'] >= threshold]
 
-# Flask stuff:
-instance/
-.webassets-cache
 
-# Scrapy stuff:
-.scrapy
+X = df.drop(columns=['Compressive_Strength'])
+y = df['Compressive_Strength']
 
-# Sphinx documentation
-docs/_build/
+#Train and Test splitting 
+X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)
 
-# PyBuilder
-.pybuilder/
-target/
+#Regressions
+models = {
+    'Linear Regression': LinearRegression(),
+    'Ridge Regression': Ridge(),
+    'SVR': SVR(kernel='rbf'),
+    'Polynomial Regression': make_pipeline(PolynomialFeatures(degree=2), LinearRegression()),
+    'Random Forest': RandomForestRegressor(random_state=42)
+}
 
-# Jupyter Notebook
-.ipynb_checkpoints
+#Plot Figures of Dataset
+plt.figure(figsize=(10, 6))
+plt.plot(y.values, label="Original Data", marker='o')
+plt.xlabel("Index")
+plt.ylabel("Compressive Strength")
+plt.title("Original Dataset")
+plt.legend()
+plt.grid(True)
+plt.show()
 
-# IPython
-profile_default/
-ipython_config.py
+results = {}
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+for name, model in models.items():
+#Training Model
+    model.fit(X_train, y_train)
+    y_pred = model.predict(X_test)
+    
+#R2, MAE and RSME
+    r2 = r2_score(y_test, y_pred)
+    mae = mean_absolute_error(y_test, y_pred)
+    rmse = np.sqrt(mean_squared_error(y_test, y_pred))
+    results[name] = {'R2': r2, 'MAE': mae, 'RMSE': rmse}
+    
+#Prediction Model Figures
+    plt.figure(figsize=(10, 6))
+    plt.scatter(y_test, y_pred, label=f"{name} Predictions", color='blue')
+    plt.plot([y_test.min(), y_test.max()], [y_test.min(), y_test.max()], 'k--', lw=2, label="Ideal Fit")
+    plt.xlabel("Actual Values")
+    plt.ylabel("Predicted Values")
+    plt.title(f"{name} Regression")
+    plt.legend()
+    plt.grid(True)
+    plt.show()
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# UV
-#   Similar to Pipfile.lock, it is generally recommended to include uv.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#uv.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/latest/usage/project/#working-with-version-control
-.pdm.toml
-.pdm-python
-.pdm-build/
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
-
-# Ruff stuff:
-.ruff_cache/
-
-# PyPI configuration file
-.pypirc
+#Accuracy Models Results
+print("Accuracy Models Results:")
+for name, metrics in results.items():
+    print(f"{name}: R2 = {metrics['R2']:.2f}, MAE = {metrics['MAE']:.2f}, RMSE = {metrics['RMSE']:.2f}")
